Implementation of main features including saving and persisting receipts, capturing photo

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,16 @@
             android:parentActivityName=".HomeActivity" >
         </activity>
 
+        <activity
+            android:name=".CreateReceiptActivity"
+            android:parentActivityName=".HomeActivity" >
+        </activity>
+
+        <activity
+            android:name=".ChosenReceiptActivity"
+            android:parentActivityName=".ViewReceiptsActivity" >
+        </activity>
+
     </application>
 
 </manifest>
