--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,8 @@ dependencies {
     compile 'com.android.support:design:26.0.0-alpha1'
     compile 'com.readystatesoftware.sqliteasset:sqliteassethelper:+'
     compile 'com.squareup.picasso:picasso:2.5.2'
+
+    debugCompile 'com.amitshekhar.android:debug-db:1.0.1'
+
     testCompile 'junit:junit:4.12'
 }
